minor content edits

--- a/src/pages/blog/009-my-second-read.mdx
+++ b/src/pages/blog/009-my-second-read.mdx
@@ -8,15 +8,17 @@ context: "I've been wanting to think about how I engage with scripture. As part 
 series: "reading the bible"
 ---
 
-After my pair of spiritual experiences (when I was 21), I spent about a week telling all sorts of people what I had experienced. Towards the end of said week, someone suggested I go check out a new initiative called the York St Silo in North Perth, where a man named David Boan was providing free Bible-teaching.
+After my [pair of spiritual experiences](/blog/004-a-pair-of-spiritual-experiences-part-one/) (when I was 21), I spent about a week telling all sorts of people what I had experienced. Towards the end of said week, someone suggested I go check out a new initiative called the York St Silo in North Perth, where a man named David Boan was providing free Bible-teaching.
 
 In some ways, the Silo was set up as an alternative to traditional Bible college. Each semester (or year, I don’t quite recall) there were different offerings — New Testament, Old Testament, biblical Greek, church history…
 
-I started off with Old Testament and biblical Greek (I’ll get to the Greek in my next post). Old Testament involved reading through the Old Testament in chronological order, and then bringing any questions we had for discussion during our weekly classes. If we didn’t have any questions, then David would teach from what he had prepared.
+I started off with Old Testament and biblical Greek (I’ll get to the Greek in my next post).
+
+Old Testament involved reading through the Old Testament in chronological order, and then bringing any questions we had to our weekly classes for discussion. If we didn’t have any questions, then David would teach from what he had prepared.
 
 I found this process to be incredibly enlightening.
 
-Whereas the first time I read through the Bible I read it slow and from cover to cover, this time I was reading it fast (I think about 25 chapters a week)! I found reading fast gave me a much better sense of the big picture — of how different stories fit together. I can remember being like ‘Oh! So that’s how all those stories in Genesis relate to each other!’
+Whereas the first time I read through the Bible I read it slow and from cover to cover, this time I was reading it _fast_ (I think about 25 chapters a week)! I found reading fast gave me a much better sense of the big picture — of how different stories fit together. I can remember being like ‘Oh! So that’s how all those stories in Genesis relate to each other!’
 
 I also found reading chronologically to be super helpful (in this case reading chronologically meant reading things in the order that they took place, rather than as they are ordered in the Bible). I found things to make a lot more sense in context (both textual and historical contexts). I particularly remember that reading Kings and Chronicles side by side was a far better experience than reading them one after the other. The latter left me with a feeling of _deja vu_ (haven’t I read this already?), whereas the former made the different contributions of the two accounts much clearer, and raised intriguing questions about their differences.
 
@@ -24,6 +26,6 @@ The other thing we did in Old Testament was read through 1 Maccabees. This was t
 
 I got a lot out of my first read through the Bible, reading slow from cover to cover, but I also got a lot out of this read-through of the Old Testament, reading fast in chronological order.
 
-Alas, I haven’t done a read through of either kind since then…
+Alas, I haven’t done a read-through of either kind since then…
 
 _How have I been reading, then_? Tune in next time to find out! 🙂
