minor content edits

--- a/src/pages/blog/012-reading-wisdom-literature.mdx
+++ b/src/pages/blog/012-reading-wisdom-literature.mdx
@@ -12,6 +12,8 @@ When I was a teenager (and possibly a young adult) Proverbs and Ecclesiastes wer
 
 Then, during the first semester of 2015, I did a unit on wisdom literature (e.g. Proverbs, Ecclesiastes, and Job). This time, I found Job to be the most impactful of the three, and for the first time I saw the three in relation to each other. I’d like to reflect on these experiences a bit more.
 
+## Job
+
 First, when I read Job prior to studying theology, I don’t think I understood what was happening with the dialogue between Job and his friends. What were they going on about? And why did they have to say it at such length?
 
 Once I was taught that they were debating the cause of Job’s suffering, it made a lot more sense to me! In contrast with his friends, Job insisted that he had done nothing wrong and he was suffering for no reason. The prologue seems to support this:
@@ -24,6 +26,8 @@ In the end God comes along and says that Job was right and his friends were wron
 
 So that’s Job. But how did Job impact how I engage with scripture? Well, it didn’t — at least not by itself. That’s where Proverbs and Ecclesiastes come in.
 
+## Proverbs and Ecclesiastes
+
 In the unit I did on Wisdom Literature it became apparent that there is a tension between Proverbs, Ecclesiastes, and Job. They each have different takes on similar sets of questions. You see, Proverbs sounds a lot like Job’s friends. It says if you are wise and diligent and do what is right, you will be blessed and things will go well, but if you are foolish or lazy or sinful, things will go badly. There is a lot of good stuff in Proverbs, and what it says is generally true, but Job’s story shows that it is not _always_ true. Job always did what was right, yet despite this, he suffered.
 
 Ecclesiastes also seems to contradict Proverbs. It is full of observations about the fact that not everything is as it seems or as we would like it to be. For example:
@@ -33,6 +37,8 @@ Ecclesiastes also seems to contradict Proverbs. It is full of observations about
 Proverbs says that things will be good for the wise and diligent, but Ecclesiastes says that sometimes ‘time and chance’ mean that this isn’t the case. While what Proverbs says is generally true, there are still plenty of exceptions.
 
 Now I could get distracted here, and start delving into the questions that this interplay between Proverbs, Job, and Ecclesiastes brings up (it’s very tempting), but right now I’m supposed to be considering how these things have influenced my engagement with scripture.
+
+## How I Engage With Scripture
 
 While It’s hard to remember exactly where I was at with this eight years ago, today I still remember this unit as a significant moment in the story of how I view scripture. For me, the idea that different books of the Bible could critically interact with each other was quite new. I’d never thought about the fact that one book could say one thing, and another could critique it (even if part of Ecclesiastes’ and Job’s critiques might have been directed more at broader cultural attitudes of the time than at Proverbs). I feel like this added a dynamism of sorts to scripture for me. Scripture could now speak to scripture, and different books could be presenting competing or diverging views on questions that persist throughout, like how God can be just in a world full of suffering, or what conduct is right/ethical and what is not. Now, rather than expecting uniform answers to these questions throughout scripture, I can see them build over time, and I can explore the difference that Jesus' story makes in the broader context of these long-standing questions.
 
