--- a/src/pages/blog/014-reading-isaiah.mdx
+++ b/src/pages/blog/014-reading-isaiah.mdx
@@ -8,7 +8,7 @@ context: "I've been wanting to think about how I engage with scripture. As part 
 series: "reading the bible"
 ---
 
-Towards the end of my time time studying theology, and after [a great internal struggle](/blog/013-bible-study-vs-devotional-reading/), I resolved to take a longer-term approach to reading scripture. In doing so I absolved myself of the expectation that I would read scripture ‘devotionally’ every day, and instead started setting longer term goals about my reading of scripture. The first of these was to map out the structure of the synoptic Gospels (Matthew, Mark, Luke).
+Towards the end of my time studying theology, and after [a great internal struggle](/blog/013-bible-study-vs-devotional-reading/), I resolved to take a longer-term approach to reading scripture. In doing so I absolved myself of the expectation that I would read scripture ‘devotionally’ every day, and instead started setting longer term goals about my reading of scripture. The first of these was to map out the structure of the synoptic Gospels (Matthew, Mark, Luke).
 
 I don’t recall the exact order after that, but one of the things I did next was to map out the use of the Old Testament in the synoptic Gospels, and then identify the books that they quoted the most. The top four were (1) Isaiah, (2) Psalms, (3) Deuteronomy, and (4) Exodus.
 
