more minor content updates

--- a/src/pages/blog/015-psalms-part-1-dissonance.mdx
+++ b/src/pages/blog/015-psalms-part-1-dissonance.mdx
@@ -18,7 +18,7 @@ Part of my early experience of Christian culture involved the notion that doubt 
 
 In contrast with this early experience of Christian culture, I recently shared my basic understanding of constructivism with someone (the idea that we are most able to learn when we are pursuing questions), and situated it within a developmental framework - in our early years we have a fairly simple worldview, and as we mature we realise its insufficiency and become open to exploring more complex approaches.
 
-Right now, I can identify with the experience of constructivism. While I was formerly able to read scripture with a simple hermeneutic,<sup>[1](#footnotes)</sup> I am increasingly unable to do so. For me, this has been very disruptive… It seems that no matter where I turn, I’m constantly confronted by questions and problems — the way I used to approach scripture isn’t working for me anymore… It’s as though I need a new (likely more complex) way of understanding scripture? In the Christian cultures that I experienced early in life, this would be frowned upon. But perhaps it would actually open up new opportunities for me to know God differently and to engage with him in a new way?
+Right now, I can identify with the experience of constructivism. While I was formerly able to read scripture with a simple hermeneutic,<sup>[1](#footnotes)</sup> I am increasingly unable to do so. For me, this has been very disruptive… It seems that no matter where I turn, I’m constantly confronted by questions and problems — the way I used to approach scripture isn’t working for me anymore… It’s as though I need a new (likely more complex) way of understanding scripture? In the Christian cultures that I experienced early in life, this process would be frowned upon. But perhaps it would actually open up new opportunities for me to know God differently and to engage with him in a new way?
 
 ## Psalm 8 and Dissonance
 
@@ -35,7 +35,7 @@ One passage that I was grappling with at the time was Psalm 8
 > The birds of the heavens and the fish of the seas,
 > Whatever passes through the paths of the seas…” (Psalm 8:4-8)
 
-Psalm 8 looks back to creation, where Adam and Eve were made in the image of God and given dominion over all the animals and fish and birds. Yet somehow, in the New Testament this Psalm is understood in a messianic way?
+Psalm 8 looks back to creation, where Adam and Eve were made in the image of God and given dominion over all the animals and fish and birds. Yet somehow, in the New Testament this Psalm is understood in a messianic way.
 
 I didn’t get it. What about this Psalm was messianic?
 
