Added series descripitons and fixed capitalisation on series cards.

--- a/src/components/series/reading-the-bible.mdx
+++ b/src/components/series/reading-the-bible.mdx
@@ -4,4 +4,6 @@ seriesColour: "blue"
 icon: "books"
 ---
 
-Todo - intro to reading the Bible series
+In 2023 I decided that I wanted to reflect on <strong>how I've engaged with scripture in the past</strong>, so that I could figure out <strong>how I want to engage with it in the&nbsp;future</strong>. 
+
+This series is the end&nbsp;result.
