--- a/src/components/series/spiritual-experiences.mdx
+++ b/src/components/series/spiritual-experiences.mdx
@@ -4,4 +4,6 @@ seriesColour: "purple"
 icon: "dove"
 ---
 
-Todo - intro to spiritual experiences series
+When I was 21 I started to keep a record of my significant spiritual experiences. 
+
+In 2023 I mustered up the courage to start publishing them (there's more to&nbsp;come).
