Aside from the projects section, I'm declaring this migration to Tailwind complete!

--- a/src/components/series/spiritual-experiences.mdx
+++ b/src/components/series/spiritual-experiences.mdx
@@ -1,9 +1,9 @@
 ---
-series: "spiritual experiences"
-seriesColour: "purple"
-icon: "dove"
+series: 'spiritual experiences'
+seriesColour: 'purple'
+icon: 'dove'
 ---
 
-When I was 21 I started to keep a record of my significant spiritual experiences. 
+When I was 21 I started to keep a record of my significant spiritual experiences.
 
 In 2023 I mustered up the courage to start publishing them (there's more to&nbsp;come).
