Troubleshooting today I learned series

--- a/src/components/series/01-spiritual-experiences.mdx
+++ b/src/components/series/01-spiritual-experiences.mdx
@@ -6,4 +6,4 @@ icon: 'dove'
 
 When I was 21 I started to keep a record of my significant spiritual experiences.
 
-In 2023 I mustered up the courage to start publishing them (there's more to&nbsp;come).
+In 2023 I mustered up the courage to start publishing them (there's more to come).
