--- a/src/components/series/02-reading-the-bible.mdx
+++ b/src/components/series/02-reading-the-bible.mdx
@@ -6,4 +6,4 @@ icon: 'books'
 
 In 2023 I decided that I wanted to reflect on how I've engaged with scripture in the past, so that I could figure out how I want to engage with it in the&nbsp;future.
 
-This series is the end&nbsp;result.
+This series is the end result.
