--- a/src/components/series/03-today-i-learned.mdx
+++ b/src/components/series/03-today-i-learned.mdx
@@ -1,7 +1,7 @@
 ---
-series: 'today I learned...'
+series: 'today I learned'
 seriesColour: 'green'
 icon: 'computer'
 ---
 
-Where I post highlights from what I've been learning recently, particularly in relation to web&nbsp;development.
+Where I post highlights from what I've been learning recently, particularly in relation to web development.
