Fixing github login

--- a/src/pages/blog/019-hyphenation-in-css.mdx
+++ b/src/pages/blog/019-hyphenation-in-css.mdx
@@ -5,7 +5,7 @@ description: 'Who knew you could automate hyphenation on the web?'
 image: 'text'
 pubDate: '2024-02-11'
 context: ''
-series: 'today I learned'
+series: 'today I learned...'
 ---
 
 So I've recently been reading [Practical Typography](https://practicaltypography.com/) by Matthew Butterick, and I've been reading it on my phone (so with a fairly small viewport). As I've been reading, one of the things that I noticed (aside from the generous margins) was the hyphenation. Hyphenation on the web felt new to me - more like reading a book than reading on my phone. I liked it.
