New post for Today I learned series

--- a/src/pages/blog/019-hyphenation-in-css.mdx
+++ b/src/pages/blog/019-hyphenation-in-css.mdx
@@ -12,6 +12,6 @@ So I've recently been reading [Practical Typography](https://practicaltypography
 
 As it turns out, CSS actually has the capacity to automate hyphenation. It's as simple as `hyphens: auto;` (although you need to have specified the language using the HTML `lang` attribute first). If you only want certain words to be hyphenated, you can use the value `manual` and insert the html escape code `&shy;` (soft hyphen) into the relevant words. While there are some other nifty properties like [hyphenate-limit-chars](https://developer.mozilla.org/en-US/docs/Web/CSS/hyphenate-limit-chars) they don't have full browser support yet, so they might not be worth the effort. The other catch I found was that it doesn't take effect for capitalised words, which is a real bummer in the context of headings.
 
-Aside from the above caveats, it seems to work well enough. But then again, my wife who is a graphic designer and an avid reader says she prefers ragged edges over having words broken apart, so she may convince me to change my mind.
+Aside from the above caveats, it seems to work well enough. But then again, my wife Melissa, who is a graphic designer and an avid reader, says she prefers ragged edges over having words broken apart. She may yet change my mind...
 
 I have it enabled on my website for now at least 🙂
